--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,33 @@
 /*  your css code here. If applicable */
+.container{
+	height:100vh;
+	padding:12px;
+	background-color:rgb(135, 206, 235);
+}
+ p:first-child{
+	color:white;
+	background-color:black;
+}
+ p:nth-child(2){
+	color:inherit;
+}
+p:last-child{
+	color:red;
+}
+li{
+	background-color:gray;
+	width:50%;
+	padding:10px;
+}
+li:nth-child(odd){
+	background-color:white;
+}
+li:first-child{
+	font-size:22px;
+}
+li:last-child{
+	font-size:22px;
+}
+li:nth-last-child(3){
+	background-color:pink;
+}
